2011-11-05  Kai Tietz  <ktietz@redhat.com>

	* _mingw.h.in: Replace always_inline attribute name
	by __always_inline__.

2011-11-04  Rafal Carr  <funman@videolan.org>
	    Kai Tietz  <ktietz@redhat.com>

	* _mingw_print_push.h: Remove wscanf-defines.
	* _mingw_print_pop.h: Likewise.
	* stdio.h: Replace macro-wscanf override via alias.
	* wchar.h: Likewise.

	* _mingw_print_push.h: Remove scanf-defines.
	* _mingw_print_pop.h: Likewise.
	* stdio.h: Replace macro-scanf override via alias.

	* _mingw_print_push.h: Remove wprintf-defines.
	* _mingw_print_pop.h: Likewise.
	* stdio.h: Replace macro-wprintf override via alias.
	* wchar.h: Likewise.

2011-11-01  Ozkan Sezer  <sezeroz@gmail.com>

	* stdio.h: Remove unintended extra "__" and "$$" characters from
	previous commits. Fix typo (s/__CRT__INLINE/__CRT_INLINE).
	(__mingw_asprintf): Mark the first and second args as __restrict.
	Mark the function as __nothrow. Replace __attribute__((nonnull()))
	by __MINGW_ATTRIB_NONNULL for consistency.
	(__mingw_vasprintf): Likewise.

2011-11-01  Kai Tietz  <ktietz@redhat.com>

	* stdio.h: Fix broken handling for snprintf/vsnprintf
	due recent patch.

2011-10-31  Rafal Carr  <funman@videolan.org>

	* _mingw_print_push.h: Remove printf-defines.
	* _mingw_print_pop.h: Likewise.
	* stdio.h: Replace macro-printf override via alias.

2011-10-23  Pau Garcia i Quiles  <paugq@users.sourceforge.net>

	* time.h: Make sure to use 64bit time functions for lfs.
	* _mingw.h.in: Likewise.

2011-10-13  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sys/stat.h: Make fstat use 64bit offset for lfs.

2011-10-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sys/stat.h: Make stat use 64bit offset for lfs.

2011-10-02  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
	    Ozkan Sezer  <sezeroz@gmail.com>

	* stdint.h: Add C++11 guards by checking for __GXX_EXPERIMENTAL_CXX0X__
	and __cplusplus >= 201103L.

2011-09-28  Ozkan Sezer  <sezeroz@gmail.com>
